--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ header {
 /* Image */
 
 #sect {
-  background-image: url(/image/bene.jpg);
+  background-image: url(/image/ben.jpg);
   color: #fff;
   height: 300px;
   display: flex;
